# PhenoGPT2

./: .gitignore  OutputConverter.py  PhenoGPT2_Codebook.ipynb  PhenoGPT2_codebook.ipynb  README.md  ds_z3.json  environment.yml  finetuning_phenogpt2_text.sh  finetuning_phenogpt2_vision.sh  hpo_added_tokens.json  inference.py  phenogpt2_pretraining.py  phenogpt2_training.py  phenogpt2_vision_training.py  pretrain_hpo_aware.sh  pyproject.toml  requirements.txt  run_evaluations.sh  run_inference.sh  run_phenogpt.sh
data/example/: text_examples.json  vision_examples.json
data/results/example_testing/: phenogpt2_rep0.json
data/training_data/: pretrain_data.pkl  training_ft_data.pkl  val_ft_data.pkl
scripts/: PhenotypeMatcher.py  bert_filtering.py  evaluations.py  formatting_results.py  llama_vision_engine.py  llava_med_engine.py  negation.py  prompting.py  utils.py
testing/output/: 11078565_phenogpt2.json  11078565_phenogpt2.txt  8751853_phenogpt2.json  8751853_phenogpt2.txt
